Bugfix/scrollbar

--- a/lekstugan-client/src/app/app.component.scss
+++ b/lekstugan-client/src/app/app.component.scss
@@ -1,17 +1,3 @@
-#header-icon {
-  border-radius: 50%;
-  width: 40px;
-
-  &:hover {
-    cursor: pointer;
-    box-shadow: 0 0 5px black;
-  }
-}
-
-.spacer {
-  margin: 5px;
-}
-
 .main-container {
   position: absolute;
   top: 0;
@@ -24,25 +10,38 @@
 .sidenav-container {
   width: minmax(200px, 300px);
   margin-top: 50px;
-  height: max-content;
+  height: min-content;
   background-color: transparent;
 }
 
 .navLink {
+  align-items: center;
+  font-size: 1.05rem;
+  font-weight: bold;
+  letter-spacing: 2px;
   text-align: start;
   background: rgb(69, 69, 69);
-  margin-top: 5px;
+  margin-top: 10px;
   display: block;
-  width: 140px;
+  width: 200px;
   border-radius: 0;
+  padding: 15px;
+  height: min-content;
 }
 
-app-header {
-  position: fixed;
-  z-index: 1;
-}
-img {
-  width: 100%;
-  // height: 40%;
+#header-image {
+  height: 150px;
   object-fit: cover;
+}
+
+@media screen and (max-width: 900px) {
+  #header-image {
+    height: 100px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #header-image {
+    height: 50px;
+  }
 }
